# router/app.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	_ "getcharzp.cn/docs"
+	"getcharzp.cn/middlewares"
 	"getcharzp.cn/service"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
@@ -16,10 +17,10 @@ func Router() *gin.Engine {
 
 	// 路由规则
 
+	// 公有方法
 	// 问题
 	r.GET("/problem-list", service.GetProblemList)
 	r.GET("/problem-detail", service.GetProblemDetail)
-
 	// 用户
 	r.GET("/user-detail", service.GetUserDetail)
 	r.POST("/login", service.Login)
@@ -27,9 +28,11 @@ func Router() *gin.Engine {
 	r.POST("/register", service.Register)
 	// 排行榜
 	r.GET("/rank-list", service.GetRankList)
-
 	// 提交记录
 	r.GET("/submit-list", service.GetSubmitList)
+
+	// 管理员私有方法
+	r.POST("/problem-create", middlewares.AuthAdminCheck(), service.ProblemCreate)
 
 	return r
 }
